--- a/Web Visualizations/Comparisons.html
+++ b/Web Visualizations/Comparisons.html
@@ -56,7 +56,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand active" href="landing-page.html">Latitude</a>
+    <a class="navbar-brand active" href="index.html">Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>  
@@ -81,7 +81,7 @@
         </li>
         
         <li class="nav-item active">
-          <a class="nav-link" href="#">Data <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="Data.html">Data <span class="sr-only">(current)</span></a>
         </li>
         </ul>
       </div>
