--- a/Web Visualizations/VisFour.html
+++ b/Web Visualizations/VisFour.html
@@ -76,7 +76,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand active" href="landing-page.html">Latitude</a>
+    <a class="navbar-brand active" href="index.html">Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>  
